--- a/browser/ehr_launch/launch.html
+++ b/browser/ehr_launch/launch.html
@@ -20,7 +20,7 @@
 
               // The client_id that you should have obtained after registering a client at
               // the EHR.
-              clientId: "my_web_app",
+              clientId: "1b2482ae-3209-45fa-af00-d93bdd6c4c33",
 
               // The scopes that you request from the EHR
               scope: [
