--- a/browser/standalone_launch/launch.html
+++ b/browser/standalone_launch/launch.html
@@ -27,8 +27,8 @@
                 // Having this option means that it makes a standalone launch. This is to make
                 // this demo usable out of the box, but it can still to EHR launch if "iss" and
                 // "launch" url parameters are passed.
-                
-             //   iss: "https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSJ9/fhir",
+
+                iss: "https://fhir-myrecord.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca",
 
                 // Typically, if your redirectUri points to the root of the current directory
                 // (where the launchUri is), you can omit this option because the default
