--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>FHIR Client Examples</h1>
     <hr/>
     <ul>
+      <li><a target="_blank" href="browser/standalone_launch/launch.html?iss=https://fhir-myrecord.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca">Provider Standalone Launch New</a></li>
+
       <li><a target="_blank" href="browser/ehr_launch/launch.html?launch=eyJhIjoiMSIsImciOiIxIn0&iss=https%3A%2F%2Flaunch.smarthealthit.org%2Fv%2Fr3%2Ffhir">EHR Launch</a></li>
       <li><a target="_blank" href="browser/standalone_launch/launch.html?iss=https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSJ9/fhir">Provider Standalone Launch</a></li>
       <li><a target="_blank" href="browser/standalone_launch/launch.html?iss=https://launch.smarthealthit.org/v/r3/sim/eyJrIjoiMSIsImIiOiJzbWFydC03Nzc3NzAxIn0/fhir">Patient Standalone Launch</a></li>
