--- a/browser/standalone_launch/launch.html
+++ b/browser/standalone_launch/launch.html
@@ -13,7 +13,7 @@
 
                 // The client_id that you should have obtained after registering a client at
                 // the EHR.
-                clientId: "1b2482ae-3209-45fa-af00-d93bdd6c4c33",
+                clientId: "my_web_app",
 
                 // The scopes that you request from the EHR
                 scope: [
