--- a/browser/ehr_launch/launch.html
+++ b/browser/ehr_launch/launch.html
@@ -20,7 +20,7 @@
 
               // The client_id that you should have obtained after registering a client at
               // the EHR.
-              clientId: "1b2482ae-3209-45fa-af00-d93bdd6c4c33",
+              clientId: "my_web_app",
 
               // The scopes that you request from the EHR
               scope: [
@@ -34,7 +34,7 @@
               // value is ".". However, some servers (like this one) do not support directory
               // indexes so "." and "./" will not automatically map to the "index.html" file
               // in that directory.
-              redirectUri: "index.html"
+             // redirectUri: "index.html"
             });
           }
         </script>
