--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <hr/>
     <ul>
 
+      <li><a target="_blank" href="browser/standalone_launch/launch.html?iss=https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSJ9/fhir">Provider Standalone Launch New</a></li>
       
-      <li><a target="_blank" href="https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSJ9/login?response_type=code&client_id=my_web_app&scope=launch%20launch%2Fpatient%20launch%2Fencounter%20openid%20fhirUser%20patient%2F*.read&redirect_uri=https%3A%2F%2F35u09.codesandbox.io%2Fbrowser%2Fstandalone_launch%2Findex.html&aud=&state=nscl8sZn6T7avcQg&provider=&login_type=provider&aud_validated=1">Provider Standalone Launch New</a></li>
-
-
-      <li><a target="_blank" href="browser/standalone_launch/?iss=https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSJ9/fhir">Provider Standalone Launch New</a></li>
       <li><a target="_blank" href="browser/ehr_launch/?launch=eyJhIjoiMSIsImciOiIxIn0&iss=https%3A%2F%2Flaunch.smarthealthit.org%2Fv%2Fr3%2Ffhir">EHR Launch</a></li>
       <li><a target="_blank" href="browser/standalone_launch/?iss=https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSJ9/fhir">Provider Standalone Launch</a></li>
       <li><a target="_blank" href="browser/standalone_launch/?iss=https://launch.smarthealthit.org/v/r3/sim/eyJrIjoiMSIsImIiOiJzbWFydC03Nzc3NzAxIn0/fhir">Patient Standalone Launch</a></li>
