--- a/browser/standalone_launch/launch.html
+++ b/browser/standalone_launch/launch.html
@@ -35,7 +35,7 @@
                 // value is ".". However, some servers (like this one) do not support directory
                 // indexes so "." and "./" will not automatically map to the "index.html" file
                 // in that directory.
-               // redirectUri: "index.html"
+                redirectUri: "./index.html"
             });
         </script>
     </body>
