--- a/browser/medications/index.html
+++ b/browser/medications/index.html
@@ -26,7 +26,7 @@
 
       FHIR.oauth2.init({
         // The client_id that you should have obtained after registering a client at the EHR.
-        clientId: "my app",
+        clientId: "my_web_app",
 
         // The scopes that you request from the EHR
         scope: [
