--- a/browser/standalone_launch/launch.html
+++ b/browser/standalone_launch/launch.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Static Template bob</title>
+        <title>Static Template</title>
         <script src="https://combinatronics.com/smart-on-fhir/client-js/master/build/fhir-client.js"></script>
     </head>
     <body>
@@ -27,7 +27,6 @@
                 // Having this option means that it makes a standalone launch. This is to make
                 // this demo usable out of the box, but it can still to EHR launch if "iss" and
                 // "launch" url parameters are passed.
-
                 iss: "https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSJ9/fhir",
 
                 // Typically, if your redirectUri points to the root of the current directory
@@ -35,7 +34,7 @@
                 // value is ".". However, some servers (like this one) do not support directory
                 // indexes so "." and "./" will not automatically map to the "index.html" file
                 // in that directory.
-                redirectUri: "https://rockclimb524.github.io/client-js-examples/browser/standalone_launch/index.html"
+                redirectUri: "index.html"
             });
         </script>
     </body>
